# coinsender

./: .gitignore  README.md  TODO
contract/: API.md  Cargo.toml  build.sh
contract/common/: index.html  main.html  verify.html
contract/common/assets/: stylesheet.css
contract/src/: lib.rs  tokens.rs  user.rs  utils.rs  views.rs  web4.rs  web4helper.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.tsx
frontend/src/app/: index.css  index.tsx
frontend/src/app/model/: index.tsx
frontend/src/app/near/: config.tsx  index.tsx  utils.tsx
frontend/src/app/providers/: index.ts  with-router.tsx  with-ui.tsx
frontend/src/features/changeToken/: index.tsx
frontend/src/features/nextSender/: index.tsx
frontend/src/features/textarea/: index.style.ts  index.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/Donate/: Donate.styled.ts  index.tsx
frontend/src/pages/Home/: Home.styled.ts  index.tsx
frontend/src/pages/Send/: index.tsx
frontend/src/pages/Vault/: Vault.styled.ts  index.tsx
frontend/src/pages/Verify/: index.tsx
frontend/src/proccesess/getWhitedList/: index.tsx
frontend/src/shared/config/: index.tsx  type.ts
frontend/src/widgets/Header/: header.styled.ts  index.tsx  types.ts
frontend/src/widgets/connectWallet/: connectWallet.styled.ts  index.tsx
res/: coinsender.wasm  coinsender_old.wasm  index.html  index_test.html  main.html  verify.html
res/assets/: kongtext-demo.html
src/: lib.rs  tokens.rs  upgrade.rs  user.rs  utils.rs  views.rs  web4.rs  web4helper.rs
(+21 files in other folders)
